[package]
name = "shareable"
version = "0.0.1"
authors = ["Joshua Gentry <pixel@deathbysoftware.com>"]
documentation="http://rust4.us/docs/shareable/"
homepage="https://github.com/pixel27/shareable"
repository="https://github.com/pixel27/shareable"

keywords= ["thread", "share", "data"]
license="AML/Apache-2.0"

[dependencies]
